add link to package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "description": "The Kingdom template for Create React App.",
   "repository": {
     "type": "git",
-    "url": "https://https://github.com/teelaunch-dev/Tech-React",
+    "url": "https://github.com/teelaunch-dev/Tech-React",
     "directory": "Tech-React"
   },
   "license": "MIT",
