--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/teelaunch-dev/cra-template",
-    "directory": "Tech-React"
+    "directory": "cra-template"
   },
   "license": "MIT",
   "engines": {
