add link to package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "description": "The Kingdom template for Create React App.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/teelaunch-dev/cra-template",
+    "url": "https://github.com/teelaunch-dev/cra-template.git",
     "directory": "cra-template"
   },
   "license": "MIT",
