--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/teelaunch-dev/cra-template-tech.git",
-    "directory": "/"
+    "directory": "cra-template-tech"
   },
   "license": "MIT",
   "engines": {
