--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "description": "The Kingdom template for Create React App.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/teelaunch-dev/cra-template-tech.git",
+    "url": "https://github.com/teelaunch-dev/cra-template-tech",
     "directory": "cra-template-tech"
   },
   "license": "MIT",
